welcome.lessons.welcome.bat.bool2.WithoutDoubles.scala.error
withoutDoubles:2: error: not found: value n
  n=die1
  ^withoutDoubles:5: error: not found: value n
      n=1
      ^withoutDoubles:6: error: not found: value n
      return n
             ^withoutDoubles:9: error: not found: value n
      n=n+1
      ^withoutDoubles:10: error: not found: value n
   	  return n    
                 ^