welcome.lessons.welcome.bat.bool2.WithoutDoubles.scala.code
def withoutDoubles(die1:Int, die2:Int, noDoubles:Boolean):Int = {
  n=die1
  if (noDoubles && die1==die2){
    if (die1==6){
      n=1
      return n
    }
    else {
      n=n+1
   	  return n    
  }
  }
  else { 
    return die1+die2
    
  }
}